# ERRCalculator

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  catalog-info.yml  environment.yml  pyproject.toml  requirements.in  requirements.txt
notebooks/00_SILUP/: 01_export_load_silup.ipynb  01_export_load_silup.py
notebooks/00_eda/: 20240701_check_wood_density_asiignment.ipynb  20240701_check_wood_density_asiignment.py  20240702_check_confidence_intervals.ipynb  20240702_check_confidence_intervals.py  20240715_check_duplicate_plots.ipynb  20240715_check_duplicate_plots.py  20240718_check_lcc.ipynb  20240718_check_lcc.py  20240722_create_plot_strata_lookup.ipynb  20240722_create_plot_strata_lookup.py  20240802_activity_area_calculation.ipynb  20240802_activity_area_calculation.py  20240805_lcc_activity_area.ipynb  20240805_lcc_activity_area.py  202441118_intersect_slope_proxy_areas_grid.ipynb  202441118_intersect_slope_proxy_areas_grid.py  202441118_intersect_slope_proxy_areas_tenement.ipynb  202441118_intersect_slope_proxy_areas_tenement.py  test.ipynb  test.py
notebooks/00_elt/pre_strata/: 01_export_load_pre_strata.ipynb  01_export_load_pre_strata.py
notebooks/00_elt/silup/: 01_export_load_silup.ipynb  01_export_load_silup.py
notebooks/00_elt/strata/: 01_export_load_strata.ipynb  01_export_load_strata.py
notebooks/01_AOI_generation/: 01_aoi_grids_2000m.ipynb  01_aoi_grids_2000m.py  01_aoi_grids_zoom17.ipynb  01_aoi_grids_zoom17.py
notebooks/01_biomass_inventory/: 01_export_load.ipynb  01_export_load.py  01_export_load_carbon_pools.ipynb  01_export_load_carbon_pools.py  02_nontree_litter_biomass.ipynb  02_nontree_litter_biomass.py
notebooks/02_carbon_stock/: 01_nontree_litter_biomass.ipynb  01_nontree_litter_biomass.py  02_living_trees_biomass.ipynb  02_living_trees_biomass.py  03_deadwood_biomass.ipynb  03_deadwood_biomass.py  04_uncertainty_per_strata.ipynb  04_uncertainty_per_strata.py
notebooks/03_analytics/: 01_criteria_development copy.ipynb  01_criteria_development copy.py
notebooks/04_ARR/: 00_tree_growth_simulation.ipynb  00_tree_growth_simulation.py  01_sequestration_by_ha_simulation.ipynb  01_sequestration_by_ha_simulation.py
src/: biomass_equations.py  biomass_inventory.py  duckdb_utils.py  get_wood_density.R  odk_data_parsing.py  settings.py
src/lookup/: pc_plot_lookup.csv  pc_plot_lookup_20240722.csv  pc_plot_lookup_20240802.csv  species_lookup.csv
