[build-system]
requires = ["setuptools >= 69.2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "geo-retail-data-mart"
# version = "2024.6.18"
description = "Prepares data for analytics and modelling (minimizes data processing) in client projects."
# authors = [ {name = "My Name", email = "myemail@example.com"}, ]
requires-python = ">= 3.10"
readme = "README.md"
dependencies = [
  "affine",
  "beautifulsoup4",
  "cdsapi",
  "dbt-core",
  "dbt-bigquery",
  "dbt-postgres",
  "dbt-duckdb",
  "duckdb",
  "earthengine-api",
  "fiona",
  "folium",
  "fsspec",
  "gcsfs",
  "gdal",
  "geopandas",
  "geowrangler",
  "geo-tileset-build-utils @ git+ssh://git@github.com/thinkingmachines/geo-tileset-build-utils.git#main",
  "google-cloud-bigquery[all]",
  "google-cloud-secret-manager",
  "ipyleaflet",
  "ipywidgets",
  "jupyterlab",
  "jupytext",
  "keplergl",
  "localtileserver",
  "loguru",
  "mapbox",
  "multiprocess",
  "nbdime",
  "nbstripout",
  "networkx",
  "numpy",
  "pandarallel",
  "pandas>=2.0.0",
  "pandas-gbq",
  "polars",
  "pre-commit",
  "pyarrow",
  "pygeos",
  "pyproj",
  "pytest",
  "requests",
  "rapidfuzz",
  "rasterio",
  "rasterstats",
  "rioxarray",
  "rtree",
  "ruff",
  "mapclassify",
  "matplotlib",
  "rapidfuzz",
  "seaborn",
  "shapely",
  "tqdm",
  "xarray",
]

[project.urls]
Repository = "https://github.com/thinkingmachines/geo-retail-data-mart"
Wiki = "https://github.com/thinkingmachines/geo-retail-data-mart/wiki"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.10
target-version = "py310"

# Discover Jupyter Notebooks
extend-include = ["*.ipynb"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"
